# arcCLI

./: .gitignore  README.md  cli-commands.md  pyproject.toml
docs/: CLI.md
src/arccli/: __init__.py  __main__.py  agent.py  ext.py  formatting.py  llm.py  main.py  run.py  skill.py
tests/: test_agent_create.py  test_llm.py
