[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arccli"
version = "0.1.0"
description = "Unified CLI for Arc products (arcllm, arcrun, arcagent)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "arcllm",
    "arcrun",
    "arcagent",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
arc = "arccli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
